# project3

./: .gitmodules  CMakeLists.txt  set_env.sh
frame/: .mvn.hpp.swp  .oneZ_sim3.hpp.swp  PTN1_rd.hpp  PTN_perm3.hpp  PTN_rd.hpp  PTN_sim3.hpp  PTN_sim3_lambda.hpp  PTN_sim3_lambda1.hpp  PTN_sim3_test.hpp  PTN_sim3_truncatednormal.hpp  data.hpp  hmlp_blas_lapack.h  mixture_multinomial.hpp  mixture_multinomial_03.hpp  mixture_multinomial_rd.hpp  mixture_multinomial_svd.hpp  mixture_perm3.hpp  mixture_potts.hpp  mixture_potts_SW.hpp  mixture_potts_rd.hpp  mixture_rd.hpp  mixture_sim.hpp  mixture_sim0.hpp  mixture_sim1.hpp  mixture_sim2.hpp  mixture_sim3.hpp  mixture_sim4.hpp  mvn.hpp  oneZ_sim3.hpp  prodNormal_sim3.hpp  prodNormal_sim3_test.hpp  twoHS_sim3.hpp  twoHS_sim3_rd.hpp  twoZ_sim3.hpp  twoZ_sim3_test.hpp  twoZ_sim3_test1.hpp
src/: hmlp_blas_lapack.cpp
test/: PTN_perm.cpp  gamma.cpp  mcmc.cpp  mcmc1.cpp  mcmc2.cpp  mcmc3.cpp  mcmc3_perm.cpp  mcmc4.cpp  mcmc_PTN.cpp  mcmc_PTN1.cpp  mcmc_PTN_rd.cpp  mcmc_PTN_test.cpp  mcmc_multinomial.cpp  mcmc_multinomial_rd.cpp  mcmc_multinomial_svd.cpp  mcmc_oneZ.cpp  mcmc_potts.cpp  mcmc_potts_SW.cpp  mcmc_prodNormal.cpp  mcmc_prodNormal_test.cpp  mcmc_rd.cpp  mcmc_twoHS.cpp  mcmc_twoHS_rd.cpp  mcmc_twoZ.cpp  mcmc_twoZ_test.cpp  readSubColumnSample.cpp
